<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/insertButton"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:layout_marginBottom="89dp"
        android:text="@string/newStep"
        app:layout_constraintBottom_toTopOf="@+id/findButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/findButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/findStep"
        app:layout_constraintBottom_toTopOf="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertButton" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="181dp"
        android:layout_height="0dp"
        android:layout_marginBottom="128dp"
        android:text="@string/insertDate"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findButton" />

</android.support.constraint.ConstraintLayout>