<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mParentProva"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="InvalidId">

    <RelativeLayout
        android:id="@+id/overlayLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/easyColor"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateTint="@color/colorPrimary"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:visibility="invisible" />

    </RelativeLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:stateListAnimator="@null"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <android.support.v7.widget.CardView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/close_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/close_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/close" />

            <Button
                android:id="@+id/btnRequest"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/passage_request"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtData" />



            <TextView
                android:id="@+id/lblNome"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/lblNome"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblTelefono"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/telephone"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNome" />

            <TextView
                android:id="@+id/txtTelefono"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/lblTelefono"
                app:layout_constraintTop_toBottomOf="@+id/txtNome" />

            <TextView
                android:id="@+id/lblAuto"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/car"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

            <TextView
                android:id="@+id/txtAuto"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/lblAuto"
                app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

            <TextView
                android:id="@+id/lblPosti"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:text="@string/places"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/txtAuto"
                app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

            <TextView
                android:id="@+id/txtPosti"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/lblPosti"
                app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

            <TextView
                android:id="@+id/lblData"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/date"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblAuto" />

            <TextView
                android:id="@+id/txtData"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/lblData"
                app:layout_constraintTop_toBottomOf="@id/lblAuto" />

            <ImageView
                android:id="@+id/call_icon"
                android:layout_width="49dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/call_icon"
                app:layout_constraintBottom_toTopOf="@+id/btnRequest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/txtPosti" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>